Fix wrong position for bootstrap/sticky-footer template
Keep it compatible with
https://getbootstrap.com/docs/3.3/examples/sticky-footer/

--- a/bootstrap/sticky-footer/react/src/App.css
+++ b/bootstrap/sticky-footer/react/src/App.css
@@ -19,8 +19,8 @@ body {
   font-size: 36px;
 }
 
-.ui.footer.segment {
-  position: fixed;
+footer.ui.basic.segment {
+  position: absolute;
   bottom: 0;
   width: 100%;
   padding-top: 20px;
@@ -29,12 +29,12 @@ body {
   background-color: #f5f5f5;
 }
 
-.ui.ui.footer.segment .ui.container {
+footer.ui.basic.segment .ui.container {
   padding-left: 15px;
   padding-right: 15px;
 }
 
-.ui.footer.segment p {
+footer.ui.basic.segment p {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #777777;
 }
